<resources>
    <string name="app_name">GPSTest</string>
    <string name="gps_status_title">Status</string>
    <string name="gps_map_title">Map</string>
    <string name="gps_sky_title">Sky</string>
    <string name="navdrawer_separator_assist_data">Modify assist data</string>
    <string name="force_xtra_injection">Inject XTRA data</string>
    <string name="force_time_injection">Inject time data</string>
    <string name="delete_aiding_data">Clear assist data</string>
    <string name="navdrawer_item_settings">Settings</string>
    <string name="navdrawer_item_help">Help</string>
    <string name="navdrawer_item_send_feedback">Send feedback</string>
    <string name="navdrawer_item_open_source">Visit us on GitHub</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="gps_start">Start</string>
    <string name="gps_pause">Pause</string>
    <string name="delete_aiding_data_success">Successfully deleted assist data.</string>
    <string name="delete_aiding_data_failure">Device does not support deleting assist data.
    </string>
    <string name="gps_switch">Off/On</string>
    <string name="send_location">Send Location</string>
    <string name="set_fix_frequency">Set Fix Frequency</string>
    <string name="force_time_injection_success">Successfully injected time data.</string>
    <string name="force_time_injection_failure">Device does not support injecting time data.
    </string>
    <string name="force_xtra_injection_success">Successfully injected XTRA data.</string>
    <string name="force_xtra_injection_failure">Device does not support injecting XTRA data.
    </string>
    <string name="zoom_in">Zoom In</string>
    <string name="zoom_out">Zoom Out</string>
    <string name="mode_map">Map</string>
    <string name="mode_satellite">Satellite</string>
    <string name="gps_latitude_label">Lat:</string>
    <string name="gps_latitude_value">%1$.7f\u00B0</string>
    <string name="gps_longitude_label">Long:</string>
    <string name="gps_longitude_value">%1$.7f\u00B0</string>
    <string name="gps_fix_time_label">Time:</string>
    <string name="gps_ttff_label">TTFF:</string>
    <string name="gps_altitude_label">Alt:</string>
    <string name="gps_altitude_value">%1$.1f m</string>
    <string name="gps_altitude_msl_label">Alt (MSL):</string>
    <string name="gps_altitude_msl_value">%1$.1f m</string>
    <string name="gps_accuracy_label">Acc:</string>
    <string name="gps_hor_and_vert_accuracy_label">H/V Acc:</string>
    <string name="gps_accuracy_value">%1$.1f m</string>
    <string name="gps_hor_and_vert_accuracy_value">%1$.1f/%2$.1f m</string>
    <string name="gps_speed_label">Speed:</string>
    <string name="gps_speed_value">%1$.1f m/sec</string>
    <string name="gps_speed_acc_label">S. Acc:</string>
    <string name="gps_speed_acc_value">%1$.1f m/sec</string>
    <string name="gps_bearing_label">Bearing:</string>
    <string name="gps_bearing_value">%1$.1f\u00B0</string>
    <string name="gps_bearing_acc_label">B. Acc:</string>
    <string name="gps_bearing_acc_value">%1$.1f\u00B0</string>
    <string name="gps_num_sats_label"># Sats:</string>
    <string name="gps_num_sats_value">%1$d/%2$d</string>
    <string name="pdop_label">PDOP:</string>
    <string name="pdop_value">%1$.1f</string>
    <string name="hvdop_label">H/V DOP:</string>
    <string name="hvdop_value">%1$.1f/%2$.1f</string>
    <string name="gps_prn_column_label">ID</string>
    <string name="gps_flag_image_label">GNSS</string>
    <string name="gps_carrier_column_label">CF</string>
    <string name="gps_snr_column_label">SNR</string>
    <string name="gps_cn0_column_label">C/N0</string>
    <string name="gps_avg_cn0_label">Avg</string>
    <string name="gps_elevation_column_label">Elev</string>
    <string name="gps_elevation_column_value">%1$.1f\u00B0</string>
    <string name="gps_azimuth_column_label">Azim</string>
    <string name="gps_azimuth_column_value">%1$.1f\u00B0</string>
    <string name="gps_flags_column_label">Flags</string>
    <string name="gps_not_supported">GPS not supported. Exiting app&#8230;</string>
    <string name="install">Install</string>
    <string name="no_thanks">No thanks</string>
    <string name="please_install_google_maps">The Map tab requires Google Maps</string>
    <string name="enable_gps_message">GPS is disabled. Enable it now?</string>
    <string name="enable_gps_positive_button">Enable GPS</string>
    <string name="enable_gps_negative_button">No</string>
    <string name="gps_set_location_listener">Started GPS with interval = %1$ss, min. dist. = %2$sm
    </string>
    <string name="sky_legend_cn0_low">10</string>
    <string name="sky_legend_cn0_middle">27.5</string>
    <string name="sky_legend_cn0_high">45</string>
    <string name="sky_legend_cn0_units">(dB-Hz)</string>
    <string name="sky_legend_snr_low">0</string>
    <string name="sky_legend_snr_middle">15</string>
    <string name="sky_legend_snr_high">30</string>
    <string name="sky_legend_snr_units">(dB)</string>
    <string name="sky_legend_title">Legend</string>
    <string name="sky_legend_shape_gnss_title">Global Navigation Satellite Systems (GNSS)</string>
    <string name="sky_legend_shape_navstar">NAVSTAR GPS (USA)</string>
    <string name="sky_legend_shape_glonass">GLONASS (Russia)</string>
    <string name="sky_legend_shape_galileo">Galileo (European Union)</string>
    <string name="sky_legend_shape_qzss">QZSS (Japan)</string>
    <string name="sky_legend_shape_sbas_title">Satellite-based Augmentation Systems (SBAS)</string>
    <string name="sky_legend_shape_beidou">BeiDou/COMPASS (China)</string>
    <string name="sky_legend_shape_gagan">GAGAN (India)</string>
    <string name="sky_legend_shape_anik">Anik (Canada)</string>
    <string name="sky_legend_shape_galaxy_15">Galaxy 15 (USA)</string>
    <string name="sky_legend_shape_inmarsat">Inmarsat 3-F2 &amp; 4-F3 (UK)</string>
    <string name="sky_legend_shape_ses_5">SES-5 (Luxembourg)</string>
    <string name="sky_legend_shape_availability_title">Signal Availability</string>
    <string name="sky_legend_shape_not_in_view">Not in view of device</string>
    <string name="sky_legend_shape_in_view">In view</string>
    <string name="sky_legend_shape_used_in_fix">Used in fix</string>
    <string name="gnss_nav_msg_status_loc_disabled">GNSS provider or Location is disabled, no updates until it\'s enabled</string>
    <string name="gnss_nav_msg_status_not_supported">Device does not support tracking of GNSS Navigation Messages</string>
    <string name="gnss_nav_msg_status_ready">GNSS Navigation Messages are successfully being tracked</string>
    <string name="gnss_measurement_status_loc_disabled">GNSS provider or Location is disabled, no updates until it\'s enabled</string>
    <string name="gnss_measurement_status_not_supported">Device does not support tracking of GNSS Measurements</string>
    <string name="gnss_measurement_status_ready">GNSS Measurements are successfully being tracked</string>
    <string name="gnss_status_unknown">Unknown status callback</string>
    <string name="main_help_whatsnew_title">What\'s New?</string>
    <string name="main_help_whatsnew">&#8226;\u0020
        <b>Sky view legend</b>
        - Shows mapping of shapes, flags, and constellations\n&#8226;\u0020
        <b>Sky view avg. signal strength</b>
        - Shows average for satellites in view and used in fix\n&#8226;\u0020
        <b>Bug fixes</b>
        - See http://bit.ly/gpstest-releases
    </string>
    <string name="main_help_close">Close</string>
    <string name="pref_title">Settings</string>
    <string name="pref_map_category_title">Map</string>
    <string name="pref_map_type_title">Map Type</string>
    <string name="pref_map_type_summary">Sets the type of map tiles shown</string>
    <string name="pref_map_type_dialog_title">Choose Map Type</string>
    <string name="pref_rotate_map_with_compass_title">Rotate Map with Compass</string>
    <string name="pref_rotate_map_with_compass_summary">Change the map orientation based on your
        direction
    </string>
    <string name="pref_tilt_map_with_sensors_title">Tilt Map with Device</string>
    <string name="pref_tilt_map_with_sensors_summary">Change to a first-person map view when you
        hold up the device
    </string>
    <string name="pref_gps_category_title">GNSS</string>
    <string name="pref_auto_start_gps_title">Auto-Start GNSS</string>
    <string name="pref_auto_start_gps_summary">Start GNSS when the app starts</string>
    <string name="pref_gps_min_time_title">Interval</string>
    <string name="pref_gps_min_time_summary">Time between GNSS fixes, in seconds</string>
    <string name="pref_gps_min_time_dialog_title">Enter an interval, in seconds</string>
    <string name="pref_gps_min_time_invalid_entry">Interval must be a number</string>
    <string name="pref_use_gnss_apis_title">Use GNSS APIs</string>
    <string name="pref_use_gnss_apis_summary">Available on Android 7.0 and higher. If unchecked,
        will use the legacy GPSStatus.Listener.
    </string>
    <string name="pref_gps_min_distance_title">Min. Distance</string>
    <string name="pref_gps_min_distance_summary">Minimum distance between GNSS fixes, in meters
    </string>
    <string name="pref_gps_min_distance_dialog_title">Enter a min. distance, in meters</string>
    <string name="pref_gps_min_distance_invalid_entry">Min. Distance must be a number</string>
    <string name="pref_analyze_gps_accuracy_title">Analyze GNSS Accuracy</string>
    <string name="pref_analyze_gps_accuracy_summary">Use GPS Benchmark to measure GNSS error
    </string>
    <string name="pref_display_category_title">Display</string>
    <string name="pref_keep_screen_on_title">Keep Screen On</string>
    <string name="pref_keep_screen_on_summary">Prevents the screen from turning off</string>
    <string name="pref_true_north_title">Point Compass to True North</string>
    <string name="pref_true_north_summary">Compass will face true north instead of magnetic north
    </string>
    <string name="pref_output_category_title">Android Monitor Output</string>
    <string name="pref_nmea_output_title">NMEA</string>
    <string name="pref_nmea_output_summary">Logs NMEA sentences to Android Studio</string>
    <string name="pref_nmea_timestamp_output_title">NMEA Timestamp</string>
    <string name="pref_nmea_timestamp_output_summary">Include NMEA timestamp in output</string>
    <string name="pref_measurement_output_title">Measurements</string>
    <string name="pref_measurement_output_summary">Logs GNSS measurements to Android Studio (Android
        7.0 and up)
    </string>
    <string name="pref_navigation_message_output_title">Navigation Messages</string>
    <string name="pref_navigation_message_output_summary">Logs GNSS navigation messages to Android
        Studio (Android 7.0 and up)
    </string>
    <string name="pref_about_category_title">About</string>
    <string name="pref_show_tutorial_title">Show tutorial</string>
    <string name="pref_show_tutorial_summary">Shows instructions for using the app</string>
    <string name="pref_dark_theme_title">Use Dark Theme</string>
    <string name="pref_dark_theme_summary">Give the background a dark color and text a light color
    </string>
    <string name="title_help">Help</string>
    <string name="gps_status">GPS Status</string>
    <string name="jingdu">longitude:</string>
    <string name="weidu">latitude:</string>
    <string name="shudu">speed:</string>
    <string name="weixing">satellite:</string>
    <string name="jingquedu">Accuracy:</string>
    <string name="fenbu">View Satellite Distribution</string>
</resources>