<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.android.gpstest.MyGpsTestActivity">

    <RelativeLayout
        android:id="@+id/TitleItem"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="@color/tab_color"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/setting_back"
            android:layout_width="82dp"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:paddingBottom="7dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="7dp"
            android:src="@drawable/back" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/gps_status"
            android:textColor="@color/white"
            android:textSize="@dimen/text_big" />
    </RelativeLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/bg">

            <TextClock
                android:id="@+id/tv_shijian"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="2018-09-20 12:20:00"
                android:textColor="@color/white"
                android:textSize="@dimen/text_mmiddle" />

            <LinearLayout
                android:id="@+id/ll_gps_conetent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_shijian"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:maxLines="1"
                        android:text="@string/jingdu"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_mmiddle" />

                    <TextView
                        android:id="@+id/tv_jingdu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_mmiddle" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:text="@string/weidu"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_mmiddle" />


                    <TextView
                        android:id="@+id/tv_weidu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_mmiddle" />

                </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@string/shudu"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_mmiddle" />

                <TextView
                    android:id="@+id/tv_shudu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_mmiddle" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@string/weixing"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_mmiddle" />

                <TextView
                    android:id="@+id/tv_weixing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_mmiddle" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@string/jingquedu"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_mmiddle" />

                <TextView
                    android:id="@+id/tv_jingquedu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_mmiddle" />

            </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_line"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/ll_gps_conetent"
                android:layout_marginTop="10dp"
                android:background="@color/color_line"
                android:orientation="vertical" />

            <Button
                android:id="@+id/btn_changview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/ll_line"
                android:layout_marginBottom="10dp"
                android:background="@drawable/selector_tab_bg"
                android:gravity="center"
                android:text="@string/fenbu"
                android:textAllCaps="false"
                android:textColor="@drawable/color_radiobutton"
                android:textSize="@dimen/text_mmiddle" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@color/black">

            <FrameLayout
                android:id="@+id/fragment_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </FrameLayout>

        </RelativeLayout>
    </LinearLayout>

</LinearLayout>
